RESOLVED FIXED 250729
Image controls should not be web exposed
https://bugs.webkit.org/show_bug.cgi?id=250729
Summary Image controls should not be web exposed
Aditya Keerthi
Reported 2023-01-17 15:07:31 PST
The following test case incorrectly displays the image controls button: <style> #image-controls { width: 100px; height: 40px; background-color: yellow; } button { width: 60px; } </style> <body> <div id="image-controls" contenteditable="false"> <button id="image-controls-button"></button> </div> </body>
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-17 15:07:58 PST
Aditya Keerthi
Comment 2 2023-01-17 15:14:45 PST
Actually, data:text/html,<button id="image-controls-button"></button> is sufficient to reproduce.
Ryosuke Niwa
Comment 3 2023-01-17 21:25:23 PST
Maybe we can use shadow DOM for this?
Aditya Keerthi
Comment 4 2023-01-18 10:47:27 PST
Aditya Keerthi
Comment 5 2023-01-18 10:48:50 PST
(In reply to Ryosuke Niwa from comment #3) > Maybe we can use shadow DOM for this? We already use shadow DOM for this – the issue is due to a logic error.
Ryosuke Niwa
Comment 6 2023-01-18 12:55:16 PST
(In reply to Aditya Keerthi from comment #5) > (In reply to Ryosuke Niwa from comment #3) > > Maybe we can use shadow DOM for this? > > We already use shadow DOM for this – the issue is due to a logic error. Ah, yeah. Saw your patch.
EWS
Comment 7 2023-01-19 21:49:00 PST
Committed 259126@main (ac4e9ee871be): <https://commits.webkit.org/259126@main> Reviewed commits have been landed. Closing PR #8777 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.